Remove .html extensions from URLs and add 404.html for clean URLs

--- a/about.html
+++ b/about.html
@@ -25,13 +25,13 @@
     <nav class="main-nav">
         <div class="nav-content">
             <div class="nav-links left">
-                <a href="index.html">Home</a>
-                <a href="about.html" class="active">About</a>
+                <a href="/">Home</a>
+                <a href="/about" class="active">About</a>
             </div>
-            <a href="index.html" class="nav-logo">Darieus Zagara</a>
+            <a href="/" class="nav-logo">Darieus Zagara</a>
             <div class="nav-links right">
-                <a href="work.html">Work</a>
-                <a href="contact.html">Contact</a>
+                <a href="/work">Work</a>
+                <a href="/contact">Contact</a>
             </div>
         </div>
     </nav>
