--- a/contact.html
+++ b/contact.html
@@ -32,13 +32,13 @@
     <nav class="main-nav">
         <div class="nav-content">
             <div class="nav-links left">
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
+                <a href="/">Home</a>
+                <a href="/about">About</a>
             </div>
-            <a href="index.html" class="nav-logo">Darieus Zagara</a>
+            <a href="/" class="nav-logo">Darieus Zagara</a>
             <div class="nav-links right">
-                <a href="work.html">Work</a>
-                <a href="contact.html" class="active">Contact</a>
+                <a href="/work">Work</a>
+                <a href="/contact" class="active">Contact</a>
             </div>
         </div>
     </nav>
