--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <nav class="main-nav">
         <div class="nav-content">
             <div class="nav-links left">
-                <a href="index.html" class="active">Home</a>
-                <a href="about.html">About</a>
+                <a href="/" class="active">Home</a>
+                <a href="/about">About</a>
             </div>
-            <a href="index.html" class="nav-logo">Darieus Zagara</a>
+            <a href="/" class="nav-logo">Darieus Zagara</a>
             <div class="nav-links right">
-                <a href="work.html">Work</a>
-                <a href="contact.html">Contact</a>
+                <a href="/work">Work</a>
+                <a href="/contact">Contact</a>
             </div>
         </div>
     </nav>
@@ -53,8 +53,8 @@
                 I help organizations tell their stories effectively through data-driven solutions and modern technical expertise. With a unique blend of communications, marketing, and technology skills, I create impactful digital experiences that drive results.
             </p>
             <div class="cta-buttons">
-                <a href="work.html" class="cta-primary">View My Work</a>
-                <a href="contact.html" class="cta-secondary">Let's Connect</a>
+                <a href="/work" class="cta-primary">View My Work</a>
+                <a href="/contact" class="cta-secondary">Let's Connect</a>
             </div>
         </section>
     </main>
