--- a/work.html
+++ b/work.html
@@ -25,13 +25,13 @@
     <nav class="main-nav">
         <div class="nav-content">
             <div class="nav-links left">
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
+                <a href="/">Home</a>
+                <a href="/about">About</a>
             </div>
-            <a href="index.html" class="nav-logo">Darieus Zagara</a>
+            <a href="/" class="nav-logo">Darieus Zagara</a>
             <div class="nav-links right">
-                <a href="work.html" class="active">Work</a>
-                <a href="contact.html">Contact</a>
+                <a href="/work" class="active">Work</a>
+                <a href="/contact">Contact</a>
             </div>
         </div>
     </nav>
@@ -93,7 +93,7 @@
                                     data-role="Writer"
                                     data-duration="1 day"
                                     data-tools="Microsoft Word, Drupal"
-                                    data-full-description="As the Principal Author of FEMA’s Building Codes Toolkit for Homeowners and Occupants, I developed an accessible guide to help individuals understand the personal value of modern building codes. The Toolkit translates technical concepts into clear, relatable language—highlighting how up-to-date codes can reduce disaster-related damage, lower insurance costs, and safeguard lives. My role involved leading content development, structuring the guide for usability, and aligning messaging with FEMA’s resilience goals. The result is a practical resource that empowers homeowners and renters to make informed decisions and recognize the real-world benefits of strong, well-enforced codes."
+                                    data-full-description="As the Principal Author of FEMA's Building Codes Toolkit for Homeowners and Occupants, I developed an accessible guide to help individuals understand the personal value of modern building codes. The Toolkit translates technical concepts into clear, relatable language—highlighting how up-to-date codes can reduce disaster-related damage, lower insurance costs, and safeguard lives. My role involved leading content development, structuring the guide for usability, and aligning messaging with FEMA's resilience goals. The result is a practical resource that empowers homeowners and renters to make informed decisions and recognize the real-world benefits of strong, well-enforced codes."
                                     data-resource-url="https://www.fema.gov/emergency-managers/risk-management/building-science/publications/building-codes-toolkit-homeowners-occupants">
                                     <div class="work-image">
                                         <img src="images/toolkit.jpg" alt="Building Codes Toolkit Cover">
@@ -108,7 +108,7 @@
                                                 <span class="work-tag" data-category="strategy">Project Management</span>
                                             </div>
                                         </div>
-                                        <p class="work-description">Principal Author of FEMA’s Building Codes Toolkit for Homeowners and Occupants, helping individuals understand how modern codes protect their homes, finances, and families.</p>
+                                        <p class="work-description">Principal Author of FEMA's Building Codes Toolkit for Homeowners and Occupants, helping individuals understand how modern codes protect their homes, finances, and families.</p>
                                         <button class="view-project">View Project</button>
                                     </div>
                                 </div>
@@ -118,7 +118,7 @@
                                     data-role="Editor"
                                     data-duration="3 months"
                                     data-tools="Microsoft Word, Drupal"
-                                    data-full-description="I served as a contributor to the 2024 updates of FEMA P-320 (Taking Shelter from the Storm) and FEMA P-361 (Safe Rooms for Tornadoes and Hurricanes), the agency’s two primary resources on safe room design and implementation. My role involved supporting content development, reviewing technical sections for clarity and accuracy, and ensuring alignment with FEMA’s current guidance and editorial standards. These publications play a critical role in promoting life safety and hazard-resistant construction, and my contributions helped ensure the updated editions are accessible, actionable, and technically sound for a wide range of audiences—including homeowners, designers, and emergency managers."
+                                    data-full-description="I served as a contributor to the 2024 updates of FEMA P-320 (Taking Shelter from the Storm) and FEMA P-361 (Safe Rooms for Tornadoes and Hurricanes), the agency's two primary resources on safe room design and implementation. My role involved supporting content development, reviewing technical sections for clarity and accuracy, and ensuring alignment with FEMA's current guidance and editorial standards. These publications play a critical role in promoting life safety and hazard-resistant construction, and my contributions helped ensure the updated editions are accessible, actionable, and technically sound for a wide range of audiences—including homeowners, designers, and emergency managers."
                                     data-resource-url="https://www.fema.gov/safe-rooms">
                                     <div class="work-image">
                                         <img src="images/saferoom.jpg" alt="Safe Room Resource Cover">
@@ -132,7 +132,7 @@
                                                 <span class="work-tag" data-category="writing">Accessibility</span>
                                             </div>
                                         </div>
-                                        <p class="work-description">Contributed to the 2024 editions of FEMA’s flagship Safe Room publications—FEMA P-320 and FEMA P-361—providing writing, review, and subject matter input.</p>
+                                        <p class="work-description">Contributed to the 2024 editions of FEMA's flagship Safe Room publications—FEMA P-320 and FEMA P-361—providing writing, review, and subject matter input.</p>
                                         <button class="view-project">View Project</button>
                                     </div>
                                 </div>
@@ -141,7 +141,7 @@
                                     data-role="Editor"
                                     data-duration="6 months"
                                     data-tools="Microsoft Word, Drupal"
-                                    data-full-description="I was brought in as a special editor to support the development of FEMA P-2181, reviewing the document across multiple phases to uphold writing quality, clarity, and consistency. My role included refining technical language, improving structural flow, and ensuring alignment with FEMA’s editorial standards. I also conducted a detailed review to confirm the publication met federal accessibility requirements, including Section 508 compliance—making the content usable for a wide range of stakeholders. My contributions helped ensure that the final version was both technically accurate and publicly accessible."
+                                    data-full-description="I was brought in as a special editor to support the development of FEMA P-2181, reviewing the document across multiple phases to uphold writing quality, clarity, and consistency. My role included refining technical language, improving structural flow, and ensuring alignment with FEMA's editorial standards. I also conducted a detailed review to confirm the publication met federal accessibility requirements, including Section 508 compliance—making the content usable for a wide range of stakeholders. My contributions helped ensure that the final version was both technically accurate and publicly accessible."
                                     data-resource-url="https://stg.wbdg.org/dhs/fema/fema-p2181">
                                     <div class="work-image">
                                         <img src="images/p2181.jpg" alt="Photo from FEMA P-2181">
@@ -318,7 +318,7 @@
                                 data-role="Strategic Planner"
                                 data-duration="2 years"
                                 data-tools="Asana, Microsoft Project, R, Google Analytics"
-                                data-full-description="As both a committee member and the lead (and sole) data analyst for the FEMA P-1000 Marketing Plan—Safer, Stronger, Smarter: A Guide to Improving School Natural Hazard Safety—I played a central role in shaping the communications strategy used to disseminate the guide nationwide. My work supported FEMA’s goal of helping K–12 schools prepare for and recover from natural hazards like earthquakes, floods, and hurricanes. I was responsible for analyzing distribution metrics, policy gaps, and stakeholder engagement data to inform outreach priorities and track progress. This evidence-based approach helped the team develop targeted messaging, build strategic partnerships, and promote adoption of best practices by school leaders and emergency managers across the country."
+                                data-full-description="As both a committee member and the lead (and sole) data analyst for the FEMA P-1000 Marketing Plan—Safer, Stronger, Smarter: A Guide to Improving School Natural Hazard Safety—I played a central role in shaping the communications strategy used to disseminate the guide nationwide. My work supported FEMA's goal of helping K–12 schools prepare for and recover from natural hazards like earthquakes, floods, and hurricanes. I was responsible for analyzing distribution metrics, policy gaps, and stakeholder engagement data to inform outreach priorities and track progress. This evidence-based approach helped the team develop targeted messaging, build strategic partnerships, and promote adoption of best practices by school leaders and emergency managers across the country."
                                 data-resource-url="">
                                 <div class="work-image">
                                     <img src="images/p1000.jpg" alt="Infographic">
@@ -342,7 +342,7 @@
                                 data-role="Strategic Planner"
                                 data-duration="5+ years"
                                 data-tools="Asana, Microsoft Project, R, Google Analytics, Cision, Meltwater, Critical Mention"
-                                data-full-description="I led the strategy development and coordinated content creation for FEMA’s involvement in the Great ShakeOut, the world’s largest earthquake preparedness drill. This included managing the agency-wide content calendar, developing messaging aligned with FEMA’s broader mitigation goals, and writing promotional and educational materials across digital and print platforms. I also served as the primary liaison with ShakeOut’s organizing entity, ensuring consistency, timely approvals, and strategic alignment between FEMA and external partners. My work helped elevate FEMA’s visibility in the campaign and ensured timely, resonant outreach to millions of stakeholders nationwide."
+                                data-full-description="I led the strategy development and coordinated content creation for FEMA's involvement in the Great ShakeOut, the world's largest earthquake preparedness drill. This included managing the agency-wide content calendar, developing messaging aligned with FEMA's broader mitigation goals, and writing promotional and educational materials across digital and print platforms. I also served as the primary liaison with ShakeOut's organizing entity, ensuring consistency, timely approvals, and strategic alignment between FEMA and external partners. My work helped elevate FEMA's visibility in the campaign and ensured timely, resonant outreach to millions of stakeholders nationwide."
                                 data-resource-url="">
                                 <div class="work-image">
                                     <img src="images/shakeout.jpg" alt="Infographic">
@@ -358,7 +358,7 @@
                                             <span class="work-tag" data-category="data">Metrics</span>
                                         </div>
                                     </div>
-                                    <p class="work-description">Led strategy, content development, and calendar management for FEMA’s participation in the Great ShakeOut, including direct coordination with the national organizing entity.</p>
+                                    <p class="work-description">Led strategy, content development, and calendar management for FEMA's participation in the Great ShakeOut, including direct coordination with the national organizing entity.</p>
                                     <button class="view-project">View Project</button>
                                 </div>
                             </div>
@@ -419,7 +419,7 @@
                                 data-role="Paid Media Specialist"
                                 data-duration="5 years"
                                 data-tools="Google Ads, Facebook Ads, Linkedin Ads, Twitter Ads, MailChimp, R, Python"
-                                data-full-description="As the Paid Media Specialist for the team contracted by the State of Virginia, I led digital advertising and campaign optimization for the Virginia Department of Agriculture and Consumer Services (VDACS) Expo over multiple years. My responsibilities included planning and executing paid media across platforms like Google Ads, Facebook, and LinkedIn, as well as managing performance-focused email marketing efforts. I continuously tested and refined ad creative, targeting strategies, and messaging to boost engagement and drive conversions. Working closely with the client, I helped ensure that each year’s Expo attracted more qualified buyers and sellers than the last—supporting both economic development goals and measurable ROI."
+                                data-full-description="As the Paid Media Specialist for the team contracted by the State of Virginia, I led digital advertising and campaign optimization for the Virginia Department of Agriculture and Consumer Services (VDACS) Expo over multiple years. My responsibilities included planning and executing paid media across platforms like Google Ads, Facebook, and LinkedIn, as well as managing performance-focused email marketing efforts. I continuously tested and refined ad creative, targeting strategies, and messaging to boost engagement and drive conversions. Working closely with the client, I helped ensure that each year's Expo attracted more qualified buyers and sellers than the last—supporting both economic development goals and measurable ROI."
                                 data-resource-url="">
                                 <div class="work-image">
                                     <img src="images/vdacs.jpg" alt="Screenshot of VDACS Dashboard">
@@ -437,7 +437,7 @@
                                             <span class="work-tag" data-category="data">BI Development</span>
                                         </div>
                                     </div>
-                                    <p class="work-description">Served as the Paid Media Specialist for Virginia’s VDACS Expo, leading multi-year ad campaigns and email marketing efforts that consistently grew buyer and seller attendance.</p>
+                                    <p class="work-description">Served as the Paid Media Specialist for Virginia's VDACS Expo, leading multi-year ad campaigns and email marketing efforts that consistently grew buyer and seller attendance.</p>
                                     <button class="view-project">View Project</button>
                                 </div>
                             </div>
@@ -446,7 +446,7 @@
                                 data-role="Email Marketing Specialist"
                                 data-duration="10+ years"
                                 data-tools="MailChimp, Granicus (GovDelivery), Hubspot, Constant Contact, Salesforce Marketing Cloud, Marketo, Google Analytics"
-                                data-full-description="I supported and helped lead email marketing efforts for a range of federal clients—including FEMA, EPA, and others—by developing strategic content calendars, crafting targeted email copy, and continuously analyzing campaign performance. My work involved coordinating message timing with broader outreach initiatives, ensuring content alignment with each agency’s voice and mission, and using insights from open and click-through rates to guide iterative improvements. Working across platforms like Granicus’ GovDelivery and Mailchimp, I helped enhance reach, improve engagement metrics, and deliver consistent, compliant messaging to diverse public audiences."
+                                data-full-description="I supported and helped lead email marketing efforts for a range of federal clients—including FEMA, EPA, and others—by developing strategic content calendars, crafting targeted email copy, and continuously analyzing campaign performance. My work involved coordinating message timing with broader outreach initiatives, ensuring content alignment with each agency's voice and mission, and using insights from open and click-through rates to guide iterative improvements. Working across platforms like Granicus' GovDelivery and Mailchimp, I helped enhance reach, improve engagement metrics, and deliver consistent, compliant messaging to diverse public audiences."
                                 data-resource-url="">
                                 <div class="work-image">
                                     <img src="images/email.jpg" alt="Screenshot of VDACS Dashboard">
