Update contact page content

--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                 <h1>Let's talk</h1>
                 <p class="contact-description">
                     Use the form below to get in touch, or just email me at: 
-                    <a href="mailto:darieus.zagara@gmail.com" class="email-link">darieus.zagara@gmail.com</a>.
+                    <a href="mailto:darieusantoninozagara@gmail.com" class="email-link">darieusantoninozagara@gmail.com</a>.
                 </p>
 
                 <form id="contactForm" class="contact-form">
