Add SEO meta tags to all pages

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Get in touch with Darieus Zagara. Connect for collaboration opportunities in digital strategy, development, content creation, or data analysis.">
+    <meta name="keywords" content="contact, collaboration, digital strategy, development, content creation, data analysis">
+    <meta name="author" content="Darieus Zagara">
+    <meta property="og:title" content="Contact | Darieus Zagara">
+    <meta property="og:description" content="Get in touch with Darieus Zagara for collaboration opportunities in digital strategy and development.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://darzags.github.io/contact.html">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Contact | Darieus Zagara">
+    <meta name="twitter:description" content="Get in touch with Darieus Zagara for collaboration opportunities in digital strategy and development.">
     <title>Contact | Darieus Zagara</title>
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
