--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Darieus Zagara - Digital Strategist & Developer specializing in communications, full-stack development, data analysis, and writing, powered by Agile methodology.">
+    <meta name="keywords" content="Darieus Zagara, digital strategy, full-stack development, data analysis, agile, communications, technical writing">
+    <meta name="author" content="Darieus Zagara">
+    <meta property="og:title" content="Darieus Zagara | Digital Strategist & Developer">
+    <meta property="og:description" content="Bridging storytelling, digital marketing, and strategy through data-driven solutions and modern technical expertise.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://darzags.github.io/">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Darieus Zagara | Digital Strategist & Developer">
+    <meta name="twitter:description" content="Bridging storytelling, digital marketing, and strategy through data-driven solutions and modern technical expertise.">
     <title>Darieus Zagara | Digital Strategist & Developer</title>
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
