--- a/work.html
+++ b/work.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explore Darieus Zagara's portfolio of work in writing, content development, strategy, digital marketing, data science, and programming. View projects showcasing technical expertise and creative problem-solving.">
+    <meta name="keywords" content="portfolio, writing, content development, digital marketing, data science, programming, technical projects, case studies">
+    <meta name="author" content="Darieus Zagara">
+    <meta property="og:title" content="Work | Darieus Zagara">
+    <meta property="og:description" content="Explore my portfolio across different areas of expertise, showcasing technical skills and creative problem-solving.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://darzags.github.io/work.html">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Work | Darieus Zagara">
+    <meta name="twitter:description" content="Explore my portfolio across different areas of expertise, showcasing technical skills and creative problem-solving.">
     <title>Work | Darieus Zagara</title>
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
