Update work page content and structure

--- a/work.html
+++ b/work.html
@@ -73,6 +73,30 @@
                         <h2>Writing & Editing</h2>
                         <div class="work-grid">
                             <div class="work-grid">
+                              <div class="work-card" 
+                                    data-client="FEMA"
+                                    data-role="Writer"
+                                    data-duration="1 day"
+                                    data-tools="Microsoft Word, Drupal"
+                                    data-full-description="I wrote the FEMA success story, How El Paso Modernized Its Plan Review Process with Digital Innovation, which showcased how the city leveraged technology to streamline permitting and improve code compliance. Working closely with local officials, I translated technical improvements into an accessible, solutions-focused narrative that emphasized the community’s leadership in adopting forward-thinking digital tools. The piece not only celebrated El Paso’s innovation but also served as a model for other jurisdictions looking to enhance their building safety and resilience through modernization."
+                                    data-resource-url="https://www.fema.gov/case-study/success-story-how-el-paso-modernized-its-plan-review-process-digital-innovation">
+                                    <div class="work-image">
+                                        <img src="images/elpaso.jpg" alt="View of Downtown El Paso from Franklin Mountains">
+                                    </div>
+                                    <div class="work-content">
+                                        <span class="work-type">Success Story</span>
+                                        <div class="title-and-tags">
+                                            <h3>How El Paso Modernized Its Plan Review Process with Digital Innovation</h3>
+                                            <div class="work-tags">
+                                                <span class="work-tag" data-category="writing">Writing</span>
+                                                <span class="work-tag" data-category="writing">Research</span>
+                                            </div>
+                                        </div>
+                                        <p class="work-description">Authored FEMA’s El Paso success story highlighting how the city transformed its plan review process through digital innovation.</p>
+                                        <button class="view-project">View Project</button>
+                                    </div>
+                                </div>
+                                <!-- Project Break -->
                                 <div class="work-card" 
                                     data-client="FEMA"
                                     data-role="Writer"
