--- a/about.html
+++ b/about.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Darieus Zagara - Communications, Marketing, and Technology Professional. Learn about my skills, experience, and expertise in creating impactful digital experiences.">
+    <meta name="keywords" content="Darieus Zagara, communications, marketing, technology, full stack development, data analysis, digital marketing, content strategy">
+    <meta name="author" content="Darieus Zagara">
+    <meta property="og:title" content="About | Darieus Zagara">
+    <meta property="og:description" content="Learn about Darieus Zagara's expertise in communications, marketing, and technology.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://darzags.github.io/about.html">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="About | Darieus Zagara">
+    <meta name="twitter:description" content="Learn about Darieus Zagara's expertise in communications, marketing, and technology.">
     <title>About | Darieus Zagara</title>
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
