added a new writing project & image to use

--- a/work.html
+++ b/work.html
@@ -100,6 +100,30 @@
                                 <div class="work-card" 
                                     data-client="FEMA"
                                     data-role="Writer"
+                                    data-duration="7 months"
+                                    data-tools="Microsoft Word"
+                                    data-full-description="I co-wrote this resource that helps local officials strengthen enforcement systems that support the implementation of natural-hazard resistant building codes, increasing community resilience and reducing losses from natural hazards. It outlines actionable steps to improve staffing, training, inspection, and compliance processes. "
+                                    data-resource-url="https://www.fema.gov/sites/default/files/documents/fema_hmd_p-2422-building-codes-enforcement-playbook_06202025.pdf">
+                                    <div class="work-image">
+                                        <img src="images/enforcement-playbook-cover.jpg" alt="Cover of FEMA's Building Codes Enforcement Playbook">
+                                    </div>
+                                    <div class="work-content">
+                                        <span class="work-type">Guidance Development</span>
+                                        <div class="title-and-tags">
+                                            <h3>Building Codes Enforcement Playbook (FEMA P-2422)</h3>
+                                            <div class="work-tags">
+                                                <span class="work-tag" data-category="writing">Writing</span>
+                                                <span class="work-tag" data-category="writing">Research</span>
+                                            </div>
+                                        </div>
+                                        <p class="work-description">Authored FEMA's Building Codes Enforcement Playbook (FEMA P-2422), a guide for local officials to strengthen enforcement systems that support the implementation of natural-hazard resistant building codes.</p>
+                                        <button class="view-project">View Project</button>
+                                    </div>
+                                </div>
+                                <!-- Project Break -->
+                                <div class="work-card" 
+                                    data-client="FEMA"
+                                    data-role="Writer"
                                     data-duration="1 day"
                                     data-tools="Microsoft Word, Drupal"
                                     data-full-description="As one of the first-ever Communication Specialists to deploy in support of FEMA's Building Science Disaster Support Program, I joined the team on the ground in the aftermath of Hurricane Ian to help communicate technical findings to broader audiences. Working alongside engineers and field experts, I translated complex structural assessments into accessible, actionable messaging for use in public outreach, reports, and digital content. My contributions included authoring a widely shared FEMA blog post that highlighted how the program turns post-disaster research into real-world resilience benefits for communities nationwide."
